--- a/admin/view/index.html
+++ b/admin/view/index.html
@@ -29,7 +29,7 @@
             <li>
               <a
                 href="#"
-                class="hover:text-gray-300 ml-80 flex flex-col items-center"
+                class="hover:text-gray-300 flex flex-col items-center"
               >
                 <i class="fa fa-home"></i>
                 <span>Home</span>
