--- a/customer/view/index.html
+++ b/customer/view/index.html
@@ -207,12 +207,12 @@
       const cartModal = document.getElementById("cart-modal");
       const closeModal = document.getElementById("close-modal");
 
-      // Open Cart Modal
+      // Mở Cart Modal
       cartIcon.addEventListener("click", () => {
         cartModal.classList.remove("hidden");
       });
 
-      // Close Cart Modal
+      // Đóng Cart Modal
       closeModal.addEventListener("click", () => {
         cartModal.classList.add("hidden");
       });
