--- a/admin/view/index.html
+++ b/admin/view/index.html
@@ -37,20 +37,11 @@
             </li>
             <li>
               <a
-                href="#"
+                href="/customer/view/index.html"
                 class="hover:text-gray-300 flex flex-col items-center"
               >
                 <i class="fa fa-store"></i>
                 <span>Store</span>
-              </a>
-            </li>
-            <li>
-              <a
-                href="#"
-                class="hover:text-gray-300 flex flex-col items-center"
-              >
-                <i class="fa fa-shopping-cart"></i>
-                <span>Cart</span>
               </a>
             </li>
           </ul>
