--- a/customer/view/index.html
+++ b/customer/view/index.html
@@ -108,21 +108,8 @@
       <!-- Floating Cart Icon -->
       <!-- Cart Icon -->
       <div class="absolute top-4 right-4">
-        <button id="cart-icon" class="relative text-white">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-            class="w-8 h-8"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M3 3h2l.4 2m0 0h15.2l1.4 7H6.4M5.4 5l-1 5m1-5h14.2m0 0L19 18.5M6.4 18.5h12.6m-12.6 0a2 2 0 11-4 0 2 2 0 014 0zm12.6 0a2 2 0 11-4 0 2 2 0 014 0z"
-            />
-          </svg>
+        <button id="cart-icon" class="relative text-black">
+          <i class="fa fa-shopping-cart text-4xl"></i>
           <span
             id="cart-count"
             class="absolute top-0 right-0 bg-red-500 text-white rounded-full text-xs w-5 h-5 flex items-center justify-center"
