update add to cart + clear cart, updateCartTotal

--- a/customer/view/index.html
+++ b/customer/view/index.html
@@ -145,13 +145,14 @@
             <div>
               <button
                 id="purchase-btn"
-                class="bg-green-500 text-white px-4 py-2 rounded mr-2"
+                class="bg-green-500 hover:bg-green-700 text-white px-4 py-2 rounded mr-2"
               >
                 Purchase
               </button>
               <button
+                onclick="clearCart()"
                 id="clear-cart-btn"
-                class="bg-red-500 text-white px-4 py-2 rounded"
+                class="bg-red-500 hover:bg-red-700 text-white px-4 py-2 rounded"
               >
                 Clear Cart
               </button>
