--- a/admin/view/index.html
+++ b/admin/view/index.html
@@ -55,6 +55,13 @@
       <div class="bg-white shadow-md rounded-lg p-4 mx-20">
         <div class="flex justify-between items-center mb-4">
           <h1 class="text-xl font-semibold text-gray-700">Shop Management</h1>
+          <!-- Tìm kiếm sản phẩm -->
+          <input
+            type="text"
+            id="searchInput"
+            placeholder="Tìm kiếm sản phẩm theo tên"
+            class="w-1/3 p-2 border border-gray-300 rounded"
+          />
           <!-- Button Thêm mới -->
           <button
             data-toggle="modal"
@@ -65,6 +72,25 @@
             + Thêm mới
           </button>
         </div>
+
+        <!-- Nút sắp xếp theo giá -->
+        <div class="flex justify-between items-center mb-4">
+          <div class="flex space-x-4">
+            <button
+              id="sortAsc"
+              class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600"
+            >
+              Sắp xếp theo giá (Tăng dần)
+            </button>
+            <button
+              id="sortDesc"
+              class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600"
+            >
+              Sắp xếp theo giá (Giảm dần)
+            </button>
+          </div>
+        </div>
+
         <!-- TABLE -->
         <table class="table-auto w-full border-collapse border border-gray-200">
           <thead>
@@ -78,9 +104,7 @@
               <th class="border border-gray-200 px-4 py-2">Thao Tác</th>
             </tr>
           </thead>
-          <tbody id="tblDanhSachSanPham">
-            <!-- Rows will be dynamically generated here -->
-          </tbody>
+          <tbody id="tblDanhSachSanPham"></tbody>
         </table>
       </div>
     </main>
